# kaguya

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: context.rs  mod.rs  parser.rs
src/cli/handlers/: config.rs  vault.rs
src/core/: mod.rs  utils.rs
src/core/services/: config.rs  vault.rs
src/db_manager/: mod.rs  toml.rs
src/db_manager/sqlite/: backup.rs  connection.rs  game.rs  game_path.rs  meta.rs  mod.rs  sync.rs
src/fs_utils/: archive.rs  hash.rs  mod.rs  restore.rs
src/migrations/: V1__initial_schema.sql
src/models/: constants.rs  db.rs  error.rs  events.rs  game_config.rs  global_config.rs  mod.rs  requests.rs  vault_config.rs
src/utils/: mod.rs  path.rs  time.rs
test/data/test_games/game-a/saves/: 1.sav  2.sav  3.sav
test/data/test_games/game-b/: global-config.json
