[package]
name = "kaguya"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
thiserror = "2.0.17"
toml = "0.9.10"
zstd = "0.13.3"
