[package]
name = "kaguya"
version = "0.1.1"
edition = "2024"
authors = ["AllenWu233"]
description = "Linux game saves and configurations backup manager for CLI enjoyers."
license = "GPL-3.0-or-later"
repository = "https://github.com/AllenWu233/kaguya"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.5"
hex = "0.4.3"
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.17"
toml = "0.9.10"
